--- a/src/MichelMichels.WeatherApp/App.xaml
+++ b/src/MichelMichels.WeatherApp/App.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:MichelMichels.WeatherApp"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-    StartupUri="MainWindow.xaml">
+    StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,18 +14,7 @@
                     SecondaryColor="Lime" />
 
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
-
-                <!--  Font Families  -->
-                <ResourceDictionary>
-                    <FontFamily x:Key="GoogleSans">pack://application:,,,/Fonts/#Google Sans</FontFamily>
-                </ResourceDictionary>
-
-                <!--  TextBlock  -->
-                <ResourceDictionary>
-                    <Style BasedOn="{StaticResource MaterialDesignTextBlock}" TargetType="TextBlock">
-                        <Setter Property="FontFamily" Value="{StaticResource GoogleSans}" />
-                    </Style>
-                </ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/MichelMichels.WeatherApp;component/Themes/Generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
